# language

./: .gitignore  Cargo.toml  Dockerfile  README.md  fib.lang  hello.lang  hello.mpl  main.lang  main.lang.ast  main.ll  main.mpl  prog  todo  todo.txt
benchmark/: fill.mpl  fill.txt  fill_space.txt  hash.mpl  lookup.mpl  lookup.txt  pop.txt  push.txt  pushpop.mpl  pushpop.txt  pushpop_space.txt  tree.mpl  tree.txt  tree_space.txt
cache/: perfect
ds/: graph.mpl  queue.mpl
examples/: all_features.mpl  error.impl  error.mpl  for.mpl  hello.mpl  perfectmap.mpl  print.mpl  recursivemap.mpl
examples/datastructures/: queue.mpl  stack.mpl  tree.mpl  vec.mpl
src/: benchmark.rs  compile.rs  functions.rs  grammar.pest  main.rs  parser.rs  perfect.rs  typecheck.rs
