[package]
name = "fp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[env]
RUST_TEST_THREADS = "1"

[features]
debugmpl = []

[dependencies]
derivative = "2.2.0"
pest = "2.6.0"
pest_derive = "2.6.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
once_cell = "1.18.0"
serde = "1.0.164"
serde_json = "1.0.97"
prettytable-rs = "0.10.0"
